<resources>
    <string name="app_name">WhatsApp</string>
    <string name="add_hint">Contact user-name</string>
    <string name="add_button">Add</string>
    <string name="log_out_button">Log-out</string>
    <string name="settings_night_mode">Night mode</string>
    <string name="settings_server_address">Server address</string>
    <string name="settings_submit">Submit</string>
    <string name="btn_send">Send</string>
    <string name="hint_message">write here…</string>
    <string name="et_user_name">User name:</string>
    <string name="et_password">Passsword:</string>
    <string name="Login_btn_to_login">login</string>
    <string name="register_in_register">register</string>
    <string name="name_of_app_fomo">Fomo</string>
    <string name="login_welcome">Welcome to Fomo!</string>
    <string name="text_logo">logo</string>
    <string name="verify_password_register">Verify the password</string>
    <string name="register_et_password">Enter your password</string>
    <string name="et_register_user_name">Enter your user name:</string>
    <string name="register_title">Register</string>
    <string name="already_register_btn">Already registered?\nreturn to login</string>
    <string name="Instructions_for_registration">* The password must combine letters and numbers.\n* The password must be at least 8 characters long.\n* Username and display name cannot contain spaces.</string>
    <string name="register_display_name">Enter your display name:</string>
    <string name="btn_upload_image">Upload an image</string>
    <string name="desc_user_image">User image</string>
    <string name="BaseUrl">http://10.0.2.2:5000/api/Users</string>
    <string name="firebaseID">id for firebase:</string>
    <string name="channel_name">my channel</string>
    <string name="channel_description">i am a content</string>
    <string name="default_notification_channel_id">im an notification!</string>
    <string name="fcm_message">ammm... im a string</string>
</resources>