<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/light_mode3"
    tools:context=".activities.RegisterActivity">

    <TextView
        android:id="@+id/register_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:ems="10"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/register_title"
        android:textColor="#C7117D"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/login_llo"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/login_llo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:padding="3dp"
            android:text="@string/Instructions_for_registration"
            android:textColor="#C7117D"
            android:textSize="11sp"

            android:textStyle="bold" />


        <EditText
            android:id="@+id/user_name_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints="@string/et_password"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/et_register_user_name"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="5dp"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/password_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints="@string/et_password"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/register_et_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="5dp"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/ver_password_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints="no|yes"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/verify_password_register"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="5dp"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/register_display_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints="no|yes"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/register_display_name"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="5dp"
            android:textColorHint="#757575" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_upload_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                android:text="@string/btn_upload_image" />

            <ImageView
                android:id="@+id/user_img"
                android:layout_width="50dp"
                android:layout_height="100dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/desc_user_image"
                android:padding="5dp"
                android:scaleType="fitCenter" />
        </LinearLayout>

        <TextView
            android:id="@+id/error_of_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:padding="5dp"
            android:textColor="#C7117D"
            android:textSize="15sp"
            android:textStyle="bold" />


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/register_finish_btn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                android:text="@string/register_in_register"
                android:textColor="#C5E1A5" />

            <Button

                android:id="@+id/ar_btn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                android:text="@string/already_register_btn"
                android:textColor="#FFCDD2" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="66dp"
        android:layout_height="64dp"
        android:layout_marginTop="42dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/text_logo"
        android:gravity="center"
        android:shadowColor="@color/design_default_color_error"
        android:shadowDx="0.0"
        android:shadowDy="0.0"
        android:shadowRadius="5"
        android:src="@drawable/logo_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_llo"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>