<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/login_bg"
    tools:context=".activities.LoginActivity"
    >

    <LinearLayout
        android:id="@+id/login_llo"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <EditText
            android:id="@+id/user_name_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints="@string/et_password"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/et_user_name"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="5dp"
            android:textColorHint="#757575" />

        <EditText

            android:id="@+id/password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints="@string/et_password"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/et_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="5dp"
            android:textColorHint="#757575" />

        <TextView
            android:id="@+id/error_of_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:padding="5dp"
            android:textColor="#C7117D"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/login_btn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                android:text="@string/Login_btn_to_login"
                android:textColor="#FFCDD2" />

            <Button
                android:id="@+id/register_btn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                android:text="@string/register_in_register"
                android:textColor="#FFCDD2" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:shadowColor="@color/design_default_color_error"
        android:shadowDx="0.0"
        android:shadowDy="0.0"
        android:shadowRadius="5"
        android:layout_width="66dp"
        android:layout_height="64dp"
        android:gravity="center"
        android:src="@drawable/logo_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_llo"
        android:contentDescription="@string/text_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/login_welcome"
        android:textColor="#C7117D"
        android:textStyle="bold"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/login_llo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/loginbtnSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_settings"
        app:backgroundTint="@color/btns"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"></com.google.android.material.floatingactionbutton.FloatingActionButton>

</androidx.constraintlayout.widget.ConstraintLayout>
